# chess-is-awesome

./: .gitignore  8-Queens-v1.ipynb  README.md  chess-strategy.py  game.py  pyproject.toml  python-chess.ipynb  python_chess_engine.ipynb  requirements.txt
chess-gnn/: README.md  config.py  debug_pickle.py  example_usage.py  requirements.txt  setup.py  simple_debug.py  test_consolidated.py  test_fix.ipynb
chess-gnn/data/: gnn_results.pkl
chess-gnn/notebooks/: 01_data_exploration.ipynb  02_graph_construction.ipynb  03_graph_analysis.ipynb  04_gnn_implementation.ipynb  README.md
chess-gnn/src/: README.md  __init__.py
chess-gnn/src/data/: __init__.py  chess_graph.py  chess_graph_backup.py  chess_graph_consolidated.py  dataset.py
chess-gnn/src/models/: __init__.py  chess_gnn.py  gnn_models.py
chess-gnn/src/utils/: __init__.py  metrics.py  visualization.py
chess_ml/: data_converter.py  data_pgn_to_csv.py
data/: fabiano-caruana-1235.pgn  garry-kasparov-2508.pgn  hikaru-nakamura-685.pgn  magnus-carlsen-1730.pgn
docs/: _config.yml  index.md
docs/_posts/: 2024-01-01-charpter-01.md  2024-01-02-charpter-02.md  2024-01-03-charpter-03.md
moves_prediction/: README.md  cnn_predict.py  data_pgn_to_csv.ipynb  data_pgn_to_csv.py  train.py
puzzles/: 8-Queens-v1.ipynb  N-queens-problem.ipynb  README.md  endgame-puzzles.ipynb  famous-chess-puzzles.ipynb  is-any-king-unsafe.ipynb  knights-tour-pProblem.ipynb  mate-puzzles.ipynb
study/: chapter01 copy.ipynb  chapter01.ipynb
