[tool.poetry]
name = "chess-is-awesome"
version = "0.1.0"
description = ""
authors = ["Vitor Meriat <vitormeriat@gmail.com>"]
readme = "README.md"
packages = [{include = "chess_is_awesome"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
pytest = "^7.4.3"
tqdm = "^4.66.1"
python-slugify = "^8.0.1"
chess = "^1.10.0"
matplotlib = "^3.8.1"
py-cpuinfo = "^9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
